src/test/ui/try-block/try-block-in-while.stderr
error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/try-block-in-while.rs:6:15
   |
LL |     while try { false } {}
   |               ^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`
   |
   = note: required by `std::ops::Try::from_ok`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
